<resources>
    <string name="app_name">uR</string>
    <string name="login_via_reddit">Войти</string>
    <string name="title_feed">Лента</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="onboard_text_first_header">Добро пожаловать в Humblr</string>
    <string name="onboard_text_first">Здесь собраны сообщества по всевозможным интересам</string>
    <string name="onboard_text_second_header">SubHumblr</string>
    <string name="onboard_text_second">Ты можешь найти новые сабы по интересам и посмотреть сабы, на которые подписан</string>
    <string name="onboard_text_third_header">Делись и сохраняй</string>
    <string name="onboard_text_third">Вкладка избранное хранит закладки с комментариями и сабами. В профиле ты найдёшь информацию о себе.
</string>
    <string name="humblr_text">Найди единомышленников с Humblr</string>
    <string name="skip_text">Пропустить</string>
    <string name="complete_text">Готово</string>
    <string name="follow">Подписаться</string>
    <string name="save">Сохранить</string>
</resources>